[package]
edition = "2021"
name = "shuttler"
version = "0.6.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
async-std = "1.10"
async-trait = "0.1"
base64 = "0.22.1"
bech32 = "0.11.0"
bip39 = "2.0.0"
bitcoin = {version = "0.32.5", features = ["rand-std", "base64"]}
bitcoincore-rpc = "0.19.0"
chacha20poly1305 = "0.10.1"
chrono = "0.4"
clap = {version = "4.0", features = ["derive"]}
dirs = "5.0.1"
ed25519-compact = "2"
frost-adaptor-signature = {git = "https://github.com/sideprotocol/frost-adaptor-signature.git", branch = "master", features = ["serde", "serialization"]}
futures = "0.3"
hex = "0.4.3"
k256 = {version = "0.13.0", features = ["arithmetic", "expose-field", "hash2curve"]}
lazy_static = "1.4"
libp2p = {version = "0.54.1", features = ["tokio", "gossipsub", "identify", "mdns", "noise", "kad", "macros", "tcp", "yamux", "quic", "cbor", "serde"]}
merkle_light = "0.4.0"
once_cell = "1.10.0"
rand = "0.8"
rand_chacha = "0.3.1"
rand_core = "0.6"
reqwest = {version = "0.12.12", features = ["json"]}
rust-crypto = "0.2.36"
serde = {version = "1.0.*", features = ["derive"]}
serde_json = "1.0.*"
sha2 = "0.10.8"
sha256 = "1.5.0"
sled = "0.34.7"
tokio = {version = "1.39.3", features = ["full"]}
tokio-tungstenite = "0.26.1"
toml = "0.8.14"
tracing = "0.1.37"
tracing-subscriber = {version = "0.3.18", features = ["env-filter"]}

cosmrs = {version = "0.21", features = ["grpc"]}
cosmos-sdk-proto = "*"
tendermint = "*"
tendermint-config = "*"
side-proto = {git = "https://github.com/sideprotocol/side-rust", features = ["grpc"]}
# Optional dependencies
ed25519-consensus = "2.1.0"
ord = "0.22.1"
ordinals = "0.0.14"
tempfile = "3.13.0"
tonic = {version = "0.12.1", features = ["codegen", "prost"]}
void = "1.0"

[dev-dependencies]
criterion = "0.5"
insta = {version = "1.31.0", features = ["yaml"]}

proptest = "1.0"
rand_chacha = "0.3"

[features]
default = ["cheater-detection"]
nightly = []
## Enable cheater detection
cheater-detection = ["frost-adaptor-signature/cheater-detection"]
